<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.kune</groupId>
  <artifactId>phoenix</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging>
  <properties>
    <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
    <maven.tomcat.port>8082</maven.tomcat.port>
    <maven.tomcat.ajp.port>8182</maven.tomcat.ajp.port>
    <maven.tomcat.path>/</maven.tomcat.path>
    <jersey2.version>2.21</jersey2.version>
    <spring4.version>4.1.7.RELEASE</spring4.version>
    <jaxrs.version>2.0.1</jaxrs.version>
    <gwt.version>2.8.0</gwt.version>
    <gwt.plugin.version>2.8.0</gwt.plugin.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <compiler.output.directory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</compiler.output.directory>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.google.gwt</groupId>
        <artifactId>gwt</artifactId>
        <version>${gwt.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-servlet</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-user</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-dev</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.2.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.fusesource.restygwt</groupId>
      <artifactId>restygwt</artifactId>
      <version>2.0.3</version>
    </dependency>
    <dependency>
      <groupId>com.github.neothemachine</groupId>
      <artifactId>gwt-phantomjs-junit-runstyle</artifactId>
      <version>1.0.1</version>
      <scope>test</scope>
    </dependency>

    <!-- server side dependencies -->
    <dependency>
      <groupId>javax.ws.rs</groupId>
      <artifactId>javax.ws.rs-api</artifactId>
      <version>${jaxrs.version}</version>
    </dependency>
    <dependency>
      <groupId>asm</groupId>
      <artifactId>asm-all</artifactId>
      <version>3.3.1</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.containers</groupId>
      <artifactId>jersey-container-servlet</artifactId>
      <version>${jersey2.version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.media</groupId>
      <artifactId>jersey-media-json-jackson</artifactId>
      <version>${jersey2.version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.ext</groupId>
      <artifactId>jersey-spring3</artifactId>
      <version>${jersey2.version}</version>
      <exclusions>
        <exclusion>
          <artifactId>spring-beans</artifactId>
          <groupId>org.springframework</groupId>
        </exclusion>
        <exclusion>
          <artifactId>spring-core</artifactId>
          <groupId>org.springframework</groupId>
        </exclusion>
        <exclusion>
          <artifactId>spring-web</artifactId>
          <groupId>org.springframework</groupId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-core</artifactId>
      <version>${spring4.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>${spring4.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-beans</artifactId>
      <version>${spring4.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-web</artifactId>
      <version>${spring4.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-aspects</artifactId>
      <version>${spring4.version}</version>
    </dependency>
  </dependencies>
  <build>
    <outputDirectory>${compiler.output.directory}</outputDirectory>
    <plugins>
      <plugin>
        <groupId>net.alchim31.maven</groupId>
        <artifactId>yuicompressor-maven-plugin</artifactId>
        <version>1.1</version>
        <executions>
          <execution>
            <goals>
              <goal>compress</goal>
            </goals>
            <phase>generate-resources</phase>
          </execution>
        </executions>
        <configuration>
          <sourceDirectory>src/main/javascript</sourceDirectory>
          <nosuffix>true</nosuffix>
          <outputDirectory>target/generated-resources/minified-javascript</outputDirectory>
          <aggregations>
            <aggregation>
              <insertNewLine>true</insertNewLine>
              <output>${compiler.output.directory}/de/kune/phoenix/public/titaniumcore.js</output>
              <inputDir>target/generated-resources/minified-javascript</inputDir>
              <includes>
                <include>${project.basedir}/src/main/javascript/titaniumcore/header.txt</include>
                <include>titaniumcore/tools/packages*.js</include>
                <include>titaniumcore/tools/isarray*.js</include>
                <include>titaniumcore/tools/binary*.js</include>
                <include>titaniumcore/tools/elapse*.js</include>
                <include>titaniumcore/tools/trace.async*.js</include>
                <include>titaniumcore/BigInteger.init1*.js</include>
                <include>titaniumcore/RSA.init1*.js</include>
                <include>titaniumcore/SecureRandom*.js</include>
                <include>titaniumcore/BigInteger.init2*.js</include>
                <include>titaniumcore/RSA.init2*.js</include>
                <include>titaniumcore/nonstructured/nonstructured*.js</include>
                <include>titaniumcore/BigInteger.init3*.js</include>
                <include>titaniumcore/RSA.init3*.js</include>
                <include>titaniumcore/Cipher*.js</include>
                <include>titaniumcore/SOAEP*.js</include>
                <include>titaniumcore/RSAKeyFormat*.js</include>
                <include>titaniumcore/BitPadding*.js</include>
                <include>titaniumcore/RSAMessageFormat*.js</include>
                <include>titaniumcore/RSAMessageFormatSOAEP*.js</include>
                <include>titaniumcore/RSAMessageFormatBitPadding*.js</include>
              </includes>
            </aggregation>
          </aggregations>
        </configuration>
      </plugin>
      <!-- GWT Maven Plugin -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>gwt-maven-plugin</artifactId>
        <version>${gwt.plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>compile</goal>
              <goal>test</goal>
              <goal>generateAsync</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <runTarget>index.html</runTarget>
          <modules>
            <module>de.kune.phoenix.main</module>
          </modules>
          <mode>com.github.neothemachine.gwt.junit.RunStylePhantomJS</mode>
          <productionMode>true</productionMode>
          <testTimeOut>300</testTimeOut>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.3</version>
        <executions>
          <execution>
            <id>war:war</id>
            <goals>
              <goal>war</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
        <configuration>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.tomcat.maven</groupId>
        <artifactId>tomcat7-maven-plugin</artifactId>
        <version>2.1</version>
        <configuration>
          <warSourceDirectory>${project.build.directory}/${project.build.finalName}</warSourceDirectory>
          <systemProperties>
            <JAVA_OPTS>-XX:MaxPermSize=256m</JAVA_OPTS>
          </systemProperties>
        </configuration>
        <executions>
          <execution>
            <id>tomcat7:exec-war</id>
            <goals>
              <goal>exec-war</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.spotify</groupId>
        <artifactId>docker-maven-plugin</artifactId>
        <version>0.4.3</version>
        <configuration>
          <imageName>kune/phoenix</imageName>
          <baseImage>kune/java8</baseImage>
          <entryPoint>["java", "-jar", "/${project.build.finalName}-war-exec.jar"]</entryPoint>
          <!-- copy the service's jar file from target into the root directory 
            of the image -->
          <resources>
            <resource>
              <targetPath>/</targetPath>
              <directory>${project.build.directory}</directory>
              <include>${project.build.finalName}-war-exec.jar</include>
            </resource>
          </resources>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
